<resources>
    <string name="app_name">LoginRegister</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="name">Name</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Don\'t have an account? Sing up</string>
    <string name="btn_link_to_login">already registered. login me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>g>
    <string name="reset_password">Please enter your email and we will send you password reset instructions</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="back">Back to log in if remember your password</string>
    <string name="about_us">About Us</string>
    <string name="come_get_to_know_us">Come get to know us</string>
    <string name="services_amp_products_info"><![CDATA[Services & Products Info]]></string>
    <string name="info">Know more about our services and produncts information</string>
    <string name="list">Come to see our services and products</string>
    <string name="services_amp_produncts_list"><![CDATA[Services & Produncts List]]></string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="addtocart">Come to see what you choose</string>
    <string name="booking">Booking</string>
    <string name="book_services">Faster booking our services</string>
    <string name="payment">Payment</string>
    <string name="pay">Pay your services and products amount</string>
    <string name="history">History</string>
    <string name="history_pay">Come to see your payment history</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact">Contact us if have any problem</string>
</resources>