<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_grey">

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/forgot_password"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tvsubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_email"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/reset_password"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#F7E4FA"
        android:fontFamily="sans-serif-black"
        android:hint="E-mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColorHint="@android:color/black"
        android:textSize="15sp" />


    <Button
        android:id="@+id/btnreset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/black"
        android:fontFamily="sans-serif-black"
        android:text="Reset Password"
        android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@null"
            android:layout_below="@id/btnlogin"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

</LinearLayout>